@@ -3363,11 +3363,6 @@ static apr_status_t rewritemap_program_child(apr_pool_t *p, const char *progname
     apr_procattr_t *procattr;
     apr_proc_t *procnew;
 
-#ifdef SIGHUP
-    apr_signal(SIGHUP, SIG_IGN);
-#endif
-
-    
     if (((rc = apr_procattr_create(&procattr, p)) != APR_SUCCESS) ||
         ((rc = apr_procattr_io_set(procattr, APR_FULL_BLOCK,
                                   APR_FULL_NONBLOCK,
