@@ -1,5 +1,9 @@
 Changes with Apache 2.0.33-dev
 
+  *) Prevent Apache from ignoring SIGHUP due to some lingering 1.3
+     cruft in piped logs and rewrite child processes.
+     [William Rowe]
+
   *) All instances of apr_lock_t have been removed and converted
      to one of the following new lock APIs: apr_thread_mutex.h,
      apr_proc_mutex.h, or apr_global_mutex.h. No new code should
